--- a/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
+++ b/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="View\" />
+  </ItemGroup>
 </Project>
