Dando procedimento ao desenvolvimento das Data_Services.

--- a/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
+++ b/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
@@ -11,12 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="View\" />
+    <Folder Include="View\Assets\Images\" />
+    <Folder Include="View\Pages\" />
   </ItemGroup>
 </Project>
