--- a/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
+++ b/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
@@ -11,13 +11,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="View\Assets\**" />
+    <Compile Remove="View\Pages\**" />
+    <EmbeddedResource Remove="View\Assets\**" />
+    <EmbeddedResource Remove="View\Pages\**" />
+    <None Remove="View\Assets\**" />
+    <None Remove="View\Pages\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="View\Assets\Images\" />
-    <Folder Include="View\Pages\" />
+    <Folder Include="View\Conta\Assets\" />
+    <Folder Include="View\Conta\Pages\" />
+    <Folder Include="View\Correntista\Assets\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\Correntista\Pages\Cadastro_Correntista.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
