--- a/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
+++ b/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <None Remove="View\Assets\Abertura\Logo_abertura.png" />
     <None Remove="View\Assets\Conta\Banner_Cadastro_Conta.jpg" />
+    <None Remove="View\Assets\Correntista\Banner_Cadastro_Correntista.jpg" />
     <None Remove="View\Assets\Login\Logo_login.png" />
     <None Remove="View\Assets\Menu\Logo_menu.png" />
   </ItemGroup>
@@ -34,6 +35,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Assets\Conta\Banner_cadastro_conta.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Assets\Correntista\Banner_Cadastro_Correntista.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Assets\Login\Logo_login.png">
