--- a/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
+++ b/App_Banco_Digital/App_Banco_Digital/App_Banco_Digital.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="View\Assets\Cartao.png" />
     <None Remove="View\Assets\Cobrar.png" />
     <None Remove="View\Assets\Pagar.png" />
     <None Remove="View\Assets\Pix.png" />
@@ -18,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="View\Assets\Cartao.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Assets\Cobrar.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
